# spoof

./: Cargo.toml  README.md
src/: main.rs  standalone.rs
src/core/: mock.rs  mod.rs
src/core/diff/: mod.rs  relaxed.rs
src/matcher/: body.rs  header.rs  method.rs  mod.rs  path.rs  query.rs
src/matchers/: body.rs  header.rs  method.rs  mod.rs  path.rs  query.rs
src/model/request/: mod.rs
src/model/request/body/: mod.rs
src/model/request/matcher/: mod.rs
src/model/request/path/: mod.rs
src/model/request/query/: absent.rs  case.rs  contains.rs  exact.rs  matches.rs  mod.rs
src/net/: request.rs
src/response/: mod.rs  response_template.rs
src/server/: mod.rs
