[package]
name = "spoof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.2.0", features = ["server", "http1", "http2"] }
tokio = { version = "1.36.0", features = [
    "sync",
    "macros",
    "rt-multi-thread",
    "signal",
] }
bytes = "1.5.0"
http-body-util = "0.1.0"
log = "0.4.21"
hyper-util = { version = "0.1.3", features = ["full"] }
futures-util = "0.3.30"
env_logger = "0.11.3"

[profile.release]
lto = true
